--- a/src/app/public/cardapio/cardapio.component.html
+++ b/src/app/public/cardapio/cardapio.component.html
@@ -20,7 +20,7 @@
         </ul>
         <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"
-                tabindex="0"><app-sanduiche></app-sanduiche></div>
+                tabindex="0"></div>
             <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab"
                 tabindex="0">Tabela 1</div>
             <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab"
