Criação de muita coisa e não commitei

--- a/src/app/administrador/administrador.component.html
+++ b/src/app/administrador/administrador.component.html
@@ -19,7 +19,7 @@
 
                     <a routerLink="produtos" class="btn btn-primary m-1">Produtos</a>
                     <a routerLink="produtos" class="btn btn-primary m-1">Pedidos</a>
-                    <a routerLink="produtos" class="btn btn-primary m-1">Clientes</a>
+                    <a routerLink="cadastrar-produtos" class="btn btn-primary m-1">Clientes</a>
 
                 </div>
 
