--- a/src/app/administrador/produtos/produtos.component.html
+++ b/src/app/administrador/produtos/produtos.component.html
@@ -1,37 +1,26 @@
 <main>
 
     <div class="card m-1 p-1">
+        <nav>
+            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
+                    type="button" role="tab" aria-controls="nav-home" aria-selected="true">Sanduíche</button>
+                <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile"
+                    type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Combo</button>
+                <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact"
+                    type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Bebida</button>
+                <button class="nav-link" id="nav-disabled-tab" data-bs-toggle="tab" data-bs-target="#nav-disabled"
+                    type="button" role="tab" aria-controls="nav-disabled" aria-selected="false"
+                    disabled>Promoção</button>
 
-        <ul class="nav nav-pills mb-3 justify-content-around " id="pills-tab" role="tablist">
-            <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
-                    type="button" role="tab" aria-controls="pills-home" aria-selected="true">Sanduiche</button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
-                    type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Combos</button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
-                    type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Bebidas</button>
-            </li>
-
-
-            <li class="nav-item ml-5">
-                <button type="button" (click)="onAdd()" class="btn btn-default btn-sm">
-                    <i class="fa-solid fa-circle-plus fa-2xl" style="color: #dbdf16;"></i>
-                </button>
-
-            </li>
-
-        </ul>
-
-
-        <div class="tab-content" id="pills-tabContent">
-
-
-            <!-- Tabela de Sanduiche -->
-            <div class="tab-pane fade" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+                <button type="button" routerLink="/admin/cadastrar-produtos" class="btn btn-primary m-1"><i class="fa-solid fa-plus"
+                        style="color: #fff700;"></i></button>
+            </div>
+        </nav>
+        <div class="tab-content" id="nav-tabContent">
+            <!-- Tabela Sanduiche -->
+            <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"
+                tabindex="0">
                 <ng-container *ngFor="let produtos of produto | async">
                     <div id="sanduiche" *ngIf="produtos.categoria =='SANDUICHE'" class="card m-1">
                         <div class="card-body col-12">
@@ -53,16 +42,14 @@
                         </div>
                     </div>
                 </ng-container>
+
+
             </div>
 
-
-
-            <!-- Tabela de Combos -->
-            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab"
-                tabindex="0">
+            <!-- Tabela Combo -->
+            <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
                 <ng-container *ngFor="let produtos of produto | async">
-                    <div id="sanduiche" *ngIf="produtos.categoria =='COMBO' || produtos.categoria =='PROMOCAO'"
-                        class="card m-1">
+                    <div id="sanduiche" *ngIf="produtos.categoria =='COMBO'" class="card m-1">
                         <div class="card-body col-12">
                             <div class="row col-12">
                                 <div class="col-8 p-1">
@@ -76,25 +63,16 @@
                                 </div>
                             </div>
                             <div class="row col-12">
-
-                                <div class="card-text m-0" *ngIf="produtos.ingredientes">
-                                    <p class="card-text m-0">{{ produtos.descricao }}</p>
-                                </div>
-                                <div class="card-text m-0" *ngIf="produtos.ingredientes">
-                                    <p class="card-text m-0">{{ getIngredientesList(produtos) }}</p>
-                                </div>
-                              
+                                <p class="card-text m-0 p-1">{{ getIngredientesList(produtos) }}.</p>
                                 <p class="card-text m-0"><b>{{produtos.valor.toString() | currency: 'BRL' }}</b></p>
                             </div>
                         </div>
                     </div>
                 </ng-container>
+
             </div>
-
-
-            <!-- Tabela de Bebidas -->
-            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab"
-                tabindex="0">
+            <!-- Tabela Bebida -->
+            <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
                 <ng-container *ngFor="let produtos of produto | async">
                     <div id="sanduiche" *ngIf="produtos.categoria =='BEBIDA'" class="card m-1">
                         <div class="card-body col-12">
@@ -117,8 +95,12 @@
                     </div>
                 </ng-container>
             </div>
+            <div class="tab-pane fade" id="nav-disabled" role="tabpanel" aria-labelledby="nav-disabled-tab"
+                tabindex="0">...</div>
         </div>
-
     </div>
+
+
+
 
 </main>
