--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,13 +13,13 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/cardapio">Cardápio</a>
+          <a class="nav-link active" routerLink="cardapio">Cardápio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/admin" href="#">Administrador</a>
+          <a class="nav-link active" routerLink="admin" href="#">Administrador</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/login">Faça seu pedido</a>
+          <a class="nav-link active" routerLink="login">Faça seu pedido</a>
         </li>
       </ul>
     </div>
