--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -49,7 +49,7 @@
                 <h5 class="card-title">{{produtos.nome}}</h5>
                 <p class="card-text mb-0"><b>Ingredientes:</b></p>
                 <p class="card-text mb-0">
-                    {{ getIngredientesList(produto | async) }}.
+                    {{ getIngredientesList(produtos) }}.
                 </p>
                 <p class="card-text m-0"><b>Valor:</b></p>
                 <p class="card-text m-0">{{produtos.valor.toString() | currency: 'BRL' }}</p>
