--- a/src/app/administrador/produtos/produtos.component.html
+++ b/src/app/administrador/produtos/produtos.component.html
@@ -63,7 +63,7 @@
                                 </div>
                             </div>
                             <div class="row col-12">
-                                <p class="card-text m-0 p-1">{{ getIngredientesList(produtos) }}.</p>
+                                <p class="card-text m-0 p-1">{{ produtos.descricao }}.</p>
                                 <p class="card-text m-0"><b>{{produtos.valor.toString() | currency: 'BRL' }}</b></p>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                                 </div>
                             </div>
                             <div class="row col-12">
-                                <p class="card-text m-0 p-1">{{ getIngredientesList(produtos) }}.</p>
+                                <p class="card-text m-0 p-1">{{ produtos.descricao }}.</p>
                                 <p class="card-text m-0"><b>{{produtos.valor.toString() | currency: 'BRL' }}</b></p>
                             </div>
                         </div>
