Criando função deletar

--- a/src/app/administrador/produtos/produtos.component.html
+++ b/src/app/administrador/produtos/produtos.component.html
@@ -31,7 +31,7 @@
                                 <div class="col-4">
                                     <button type="button" (click)="onRemove(produtos)" class="btn btn-default btn-sm"><i
                                             class="fa-solid fa-xmark fa-lg mx-1" style="color: #fa0505;"></i></button>
-                                    <button type="button" (click)="onEdit()" class="btn btn-default btn-sm"><i
+                                    <button type="button" (click)="onEdit(produtos)" class="btn btn-default btn-sm"><i
                                             class="fa-solid fa-pen-to-square" style="color: #1e69eb;"></i></button>
                                 </div>
                             </div>
@@ -58,7 +58,7 @@
                                 <div class="col-4">
                                     <button type="button" (click)="onRemove(produtos)" class="btn btn-default btn-sm"><i
                                             class="fa-solid fa-xmark fa-lg mx-1" style="color: #fa0505;"></i></button>
-                                    <button type="button" (click)="onEdit()" class="btn btn-default btn-sm"><i
+                                    <button type="button" (click)="onEdit(produtos)" class="btn btn-default btn-sm"><i
                                             class="fa-solid fa-pen-to-square" style="color: #1e69eb;"></i></button>
                                 </div>
                             </div>
@@ -83,7 +83,7 @@
                                 <div class="col-4">
                                     <button type="button" (click)="onRemove(produtos)" class="btn btn-default btn-sm"><i
                                             class="fa-solid fa-xmark fa-lg mx-1" style="color: #fa0505;"></i></button>
-                                    <button type="button" (click)="onEdit()" class="btn btn-default btn-sm"><i
+                                    <button type="button" (click)="onEdit(produtos)" class="btn btn-default btn-sm"><i
                                             class="fa-solid fa-pen-to-square" style="color: #1e69eb;"></i></button>
                                 </div>
                             </div>
