--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer navbar-fixed-bottom">
+<footer>
 
     <small>&copy;
         2023 WallaceLanches. Todos os direitos reservados.
