--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
     <main><router-outlet></router-outlet></main>
-<app-footer style="width: 100%;"></app-footer>
+<app-footer></app-footer>
