--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,30 +1,24 @@
 @media (max-width: 576px) {
-    .cabecalho .logo {
-      padding: 2rem;
-    }
-
-    footer {
-      font-size:xx-small;
-      
-    }
-  
-    .cabecalho p {
-      font-size: 1.5rem
-    }
+  .cabecalho .logo {
+    padding: 2rem;
   }
-  
-  @media (max-width: 768px) {
-    footer {
-      display: flex;
-      flex-direction: column-reverse;
-      gap: 1rem;
-    }
+
+  footer {
+    font-size: xx-small;
+
+  }
+
+  .cabecalho p {
+    font-size: 1.5rem
+  }
 }
-footer {
-    background-color: #ca0f0fe5;
-    
-  
-    align-items: center;
-    padding: 1rem 2rem;
-    
+
+@media (max-width: 768px) {
+  footer {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 1rem;
+    margin-bottom: 0px ;
+  }
 }
+
