--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -5,6 +5,14 @@
 
   footer {
     font-size: xx-small;
+    background-color: #ca0f0fe5;
+    position: inherit;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    padding: 1rem 2rem;
+    text-align: center;
 
   }
 
@@ -18,7 +26,25 @@
     display: flex;
     flex-direction: column-reverse;
     gap: 1rem;
-    margin-bottom: 0px ;
+    margin-bottom: 0px;
+
+    position: inherit;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #ca0f0fe5;
+    padding: 1rem 2rem;
+    text-align: center;
   }
 }
 
+footer {
+  background-color: #ca0f0fe5;
+  position: inherit;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  padding: 1rem 2rem;
+  text-align: center;
+}
